--- a/wp-content/themes/ualbany/resources/style.css
+++ b/wp-content/themes/ualbany/resources/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         ualbany
+Theme Name:         UAlbany Study Abroad
 Theme URI:          http://verifiedstudios.comsage/
 Description:        UAlbany Study Abroad Theme
 Version:            9.0.0-beta.4
