--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -44,5 +44,6 @@
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/pages";
+@import "layouts/page-home";
 @import "layouts/posts";
 @import "layouts/tinymce";
