--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -29,3 +29,20 @@
     text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
   }
 }
+
+.page-section {
+  padding: 30px;
+
+  &--buttons {
+    background-color: $lightgray;
+
+    .btn {
+      margin: 0 20px;
+      background-color: $white;
+    }
+  }
+}
+
+.section-title {
+  text-align: center;
+}
