myths on homepage

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -62,6 +62,11 @@ body.home {
   }
 }
 
+#homepage-myths {
+  background-color: $gray;
+  color: $purple;
+}
+
 #homepage-social {
   background-color: $purple;
   color: $white;
