--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -46,4 +46,5 @@
 @import "layouts/pages";
 @import "layouts/page-home";
 @import "layouts/posts";
+@import "layouts/myths";
 @import "layouts/tinymce";
