--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_myths.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_myths.scss
@@ -7,6 +7,34 @@
     transform: scale(0.85);
     transition: all 300ms ease;
 
+    .myth {
+      &--title {
+        .fa {
+          font-size: 0.5em;
+          opacity: 0.5;
+          line-height: 1em;
+
+          &:first-of-type {
+            margin-bottom: -0.5em;
+            line-height: 0.5em;
+          }
+        }
+      }
+
+      &--busted {
+        font-size: 1.25rem;
+        color: $black;
+        margin-top: 1rem;
+      }
+
+      &--reference {
+        font-size: 0.85rem;
+        font-weight: 700;
+        color: $gray;
+        text-transform: uppercase;
+      }
+    }
+
     &.slick-current {
       background-color: $white;
       transform: scale(1);
