--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -28,9 +28,9 @@ $altteal: desaturate($teal, 33);
 $deep-brown: darken($gold, 15);
 
 //fonts
-$font-sans: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 $font-serif: 'Trajan Pro', 'Times New Roman', Times, serif;
-$font-headings: "Trade Gothic LT Com Bold Cn", Arial, Sans-serif;
+$font-headings: 'Trade Gothic LT Com Bold Cn', Arial, Sans-serif;
 $font-buttons: $font-sans;
 
 // bootstrap
