Uppercase text in navbar

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -43,13 +43,15 @@
   }
 
   .nav > li {
-    font-size: 1.35rem;
+    font-size: 1.15rem;
     font-weight: 700;
     font-family: $font-headings;
 
     a,
     a:visited {
       color: $white;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     a:hover {
