Front header styled to match new branding

--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -13,6 +13,7 @@ $teal: #006c68;
 
 $white: #fff;
 $black: #000;
+$black-transparent-50: rgba(0, 0, 0, 0.25);
 
 // grays
 $lightgray: lighten($gray, 16);
