--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -18,8 +18,10 @@
   }
 
   .front-header-content {
-    background-color: $darkgray;
+    background-color: $darkgray; // Fallback
+    background-color: $black-transparent-50;
     width: auto;
+    max-width: 50%;
     display: inline-block;
     padding: $spacing-extra-large;
     position: relative;
@@ -30,12 +32,15 @@
 
   h2.front-title {
     font-family: $font-headings;
+    text-transform: uppercase;
+    font-size: 4rem;
+    line-height: 1.2em;
   }
 
   h3.front-subtitle {
     font-family: $font-sans;
     font-weight: 300 !important;
-    font-size: 1.35rem;
+    font-size: 1.8rem;
     margin: 2rem 0 1rem;
     opacity: 0.85;
     color: $white;
