--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -38,8 +38,7 @@
   }
 
   h3.front-subtitle {
-    font-family: $font-sans;
-    font-weight: 300 !important;
+    font-family: $font-headings;
     font-size: 1.8rem;
     margin: 2rem 0 1rem;
     opacity: 0.85;
