--- a/wp-content/themes/ualbany/resources/assets/styles/components/_headings.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_headings.scss
@@ -6,6 +6,10 @@ h5 {
   font-family: $font-headings;
 }
 
+h2 {
+  text-transform: uppercase;
+}
+
 h3 {
   color: $brand-primary;
   font-size: 50px;
