--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -34,11 +34,13 @@
   padding: 30px;
 
   &--buttons {
-    background-color: $lightgray;
+    background-color: $offwhite;
 
     .btn {
       margin: 0 20px;
-      background-color: $white;
+      background-color: transparent;
+      border: 2px solid $darkgray;
+      color: $darkgray;
     }
   }
 }
