--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -43,6 +43,9 @@ a:hover {
 
 h1.single-title {
   font-family: $font-headings;
+  text-transform: uppercase;
+  font-size: 4rem;
+  line-height: 1.2em;
 }
 
 h2.single-subtitle {
