--- a/wp-content/themes/ualbany/resources/assets/styles/components/_headings.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_headings.scss
@@ -14,10 +14,12 @@ h2 {
 
 h3 {
   color: $brand-primary;
+  text-transform: uppercase;
   font-size: 50px;
 }
 
 h4 {
   color: $brand-primary;
+  text-transform: uppercase;
   font-size: 25px;
 }
