Secondary page styling

--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -49,9 +49,8 @@ h1.single-title {
 }
 
 h2.single-subtitle {
-  font-family: $font-serif;
-  font-weight: 300 !important;
-  font-size: 1.35rem;
+  font-family: $font-headings;
+  font-size: 1.8rem;
   margin: 1rem 0 0.5rem;
   opacity: 0.85;
 }
