--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -11,6 +11,8 @@ $gold: #eeb211;
 $gray: #97a4af;
 $teal: #006c68;
 
+$gray-hover: #555;
+
 $white: #fff;
 $black: #000;
 $black-transparent-50: rgba(0, 0, 0, 0.5);
