--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -25,7 +25,7 @@
     max-width: 50%;
     display: inline-block;
     padding: $spacing-large $spacing-extra-large;
-    margin-bottom: -$spacing-large;
+    margin-bottom: $spacing-extra-large;
     position: relative;
     z-index: 5;
     text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
