--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -47,4 +47,5 @@
 @import "layouts/page-home";
 @import "layouts/posts";
 @import "layouts/myths";
+@import "layouts/submenu";
 @import "layouts/tinymce";
