--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -31,7 +31,7 @@ $altteal: desaturate($teal, 33);
 $deep-brown: darken($gold, 15);
 
 //fonts
-$font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+$font-sans: 'News Cycle', -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 $font-serif: 'Trajan Pro', 'Times New Roman', Times, serif;
 $font-headings: 'Trade Gothic LT Com Bold Cn', Arial, Sans-serif;
 $font-buttons: $font-headings;
