--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -12,16 +12,15 @@
 }
 
 .banner_utility {
-  background-color: $white;
   padding: 0.5rem;
+
+  @extend .row-light_2;
 
   .nav {
     float: right;
   }
 
   .nav > li {
-    font-size: 0.85rem;
-
     a,
     a:visited {
       opacity: 0.75;
