updates on myth and other stylings

--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -23,7 +23,7 @@ $darkgray: darken($gray, 40);
 $offwhite: lighten($gray, 33);
 
 //alts
-$altpurple: darken($purple, 5);
+$altpurple: #602481;
 $altgray: darken($gray, 8);
 $altteal: desaturate($teal, 33);
 
