--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -12,7 +12,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    opacity: 0.75;
+    opacity: 1;
     background-size: cover;
     background-position: 50% 50%;
     //filter: blur(0.23em);
@@ -30,6 +30,18 @@
     z-index: 5;
     text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
   }
+}
+
+.single-photo-overlay {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-image: url(../images/isometric-cubes.png);
 }
 
 .introduction-section {
