--- a/wp-content/themes/ualbany/resources/assets/styles/utilities/_mixins.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/utilities/_mixins.scss
@@ -53,3 +53,9 @@
     @include respond-to($mediatype) { @content; }
   }
 }
+
+@mixin box-shadow($shadow: 0 3px 0 rgba(0, 0, 0, 0.1)) {
+  -moz-box-shadow: $shadow;
+  -webkit-box-shadow: $shadow;
+  box-shadow: $shadow;
+}
