--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
@@ -12,28 +12,33 @@
   margin: 30px 0;
 }
 
-.single-program .carousel {
-  margin-bottom: 100px;
+.single-program .program-dates {
+  background-color: $lightgray;
 
-  .carousel-indicators {
-    bottom: -100px;
+  h2 {
+    font-size: 1.5rem;
+    margin: 20px 0;
+  }
 
-    > li {
-      width: 75px;
-      height: 75px;
-      text-indent: 0;
+  &__date {
+    font-size: 2.5rem;
+    margin: 20px 0;
 
-      img {
-        width: 75px;
-        height: auto;
-        max-width: 100%;
-        cursor: pointer;
-        opacity: 1;
-      }
+    &--app-deadline {
+      color: $red;
     }
+  }
+}
 
-    > li.active img {
-      opacity: 0.25;
-    }
+.single-program .program-video {
+  padding: 20px 0;
+}
+
+.single-program .program-meta {
+  padding: 20px 0;
+  background-color: $lightgray;
+
+  &__label {
+    font-size: 1.5rem;
   }
 }
