--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -56,3 +56,17 @@ h2.single-subtitle {
   opacity: 0.85;
 }
 
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
