--- a/wp-content/themes/ualbany/resources/assets/styles/utilities/_mixins.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/utilities/_mixins.scss
@@ -59,3 +59,9 @@
   -webkit-box-shadow: $shadow;
   box-shadow: $shadow;
 }
+
+@mixin border-radius($radius) {
+  -moz-border-radius: $radius;
+  -webkit-border-radius: $radius;
+  border-radius: $radius;
+}
