--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -70,3 +70,15 @@ h2.single-subtitle {
   width: 100%;
   height: 100%;
 }
+
+table {
+  border: 1px solid $lightgray;
+}
+
+table tbody tr:nth-child(odd) {
+  background-color: $white;
+}
+
+table tbody tr td {
+  padding: 5px;
+}
