--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -25,7 +25,7 @@
     display: inline-block;
     padding: $spacing-extra-large;
     position: relative;
-    z-index: 5;
+    //z-index: 5;
     text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
     margin-bottom: $spacing-small;
   }
