--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
@@ -111,3 +111,45 @@
   padding: 30px 0;
 }
 
+.single-program .incoming-subfooter {
+  position: relative;
+
+  .tab-pane {
+    padding: 0;
+  }
+
+  &__image {
+    position: relative;
+    min-height: 400px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-size: cover;
+  }
+
+  &__map {
+    height: 300px;
+  }
+
+  &__content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: $darkgray; // Fallback
+    background-color: $black-transparent-50;
+    width: 100%;
+    //display: inline-block;
+    padding: $spacing-extra-large;
+    z-index: 5;
+    text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
+    color: $white;
+
+    @media (min-width: map-get($container-max-widths, sm)) {
+      width: auto;
+      max-width: 50%;
+    }
+
+    h3 {
+      color: $white;
+    }
+  }
+} // .single-program .incoming-subfooter
