ACF field for video blurb

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
@@ -60,6 +60,10 @@
 
 .single-program .program-video {
   padding: 20px 0;
+
+  &__blurb {
+    padding: 20px 0;
+  }
 }
 
 .single-program .program-meta {
