Template files for archives and faculty

--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -46,6 +46,7 @@
 @import "layouts/pages";
 @import "layouts/page-home";
 @import "layouts/posts";
+@import "layouts/archives";
 @import "layouts/programs";
 @import "layouts/myths";
 @import "layouts/submenu";
