--- a/wp-content/themes/ualbany/resources/assets/styles/common/_typography.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=News+Cycle');
+
 @font-face {
   font-family: 'Trade Gothic LT Com Bold Cn';
   src: url('../fonts/TradeGothicLTCom-BdCn20.eot');
@@ -9,3 +11,4 @@
   font-weight: bold;
   font-style: normal;
 }
+
