--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
@@ -1,3 +1,74 @@
+footer {
+  background: #333 url(../images/mapimg_left.jpg) no-repeat left top;
+  padding-top: 35px;
+  padding-bottom: 36px;
+  margin: 0;
+  min-height: 360px;
+
+  .region-footer {
+    margin-left: 360px;
+    margin-top: 40px;
+
+    .widget {
+      font-size: 14px;
+      color: #e4e4e4;
+      line-height: 22px;
+    }
+
+    .widget.custom_html-2 {
+      width: 40%;
+      float: left;
+
+      &::after {
+        clear: both;
+      }
+
+      .address-info {
+        margin-top: 25px;
+      }
+    }
+
+    .widget_nav_menu {
+      width: 30%;
+      float: left;
+      font-size: 16px;
+      line-height: 16px;
+      color: #fff;
+
+      &::after {
+        clear: both;
+        content: "";
+        display: table;
+      }
+
+      ul {
+        list-style-type: none;
+
+        li {
+          padding-bottom: 7px;
+          width: 80%;
+
+          a {
+            color: #ddd;
+            line-height: 1.6rem;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+
+    .custom_html-3 {
+      text-transform: uppercase;
+      color: #9d9d9d;
+      border-top: 1px solid #464646;
+      padding-top: 10px;
+      clear: both;
+      top: 40px;
+      padding-bottom: 20px;
+    }
+  }
+}
+
 .subfooter__link {
   display: block;
   padding: 30px;
