Subject archive template

--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -56,6 +56,10 @@ h2.single-subtitle {
   opacity: 0.85;
 }
 
+.entry-content h2 {
+  margin: 0.75em 0;
+}
+
 .video-wrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
