--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
@@ -66,9 +66,9 @@
   }
 }
 
-.single-program .program-meta {
+.single-program .program-meta,
+.program .program-meta {
   padding: 20px 0;
-  background-color: $lightgray;
 
   &__label {
     font-size: 1.5rem;
@@ -109,7 +109,11 @@
       }
     }
   }
-} // .single-program .program-meta
+} // .single-program .program-meta, .program .program-meta
+
+.single-program .program-meta {
+  background-color: $lightgray;
+} // .program .program-meta
 
 .single-program .tab-pane {
   padding: 30px 0;
