--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -86,3 +86,26 @@ table tbody tr:nth-child(odd) {
 table tbody tr td {
   padding: 5px;
 }
+
+.dataTables_wrapper .row {
+  width: 100%;
+}
+
+table.dataTable {
+  background-color: $white;
+  font-size: 1rem;
+}
+
+.form-inline.dt-bootstrap label {
+  @media (min-width: 576px) {
+    justify-content: start;
+  }
+}
+
+.dataTables_length {
+  margin-bottom: 15px;
+}
+
+.dataTables_filter {
+  float: right;
+}
