--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_programs.scss
@@ -182,6 +182,20 @@
 .program {
   margin-bottom: 20px;
 
+  &__thumbnail {
+    display: block;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-size: cover;
+  }
+
+  a.program__description,
+  a.program__description:hover {
+    color: $black;
+    text-decoration: none;
+  }
+
   h3 {
     font-size: 1.5rem;
     color: $purple;
@@ -190,11 +204,4 @@
 
 .main > article .program h3 {
   color: $purple;
-}
-
-.program__thumbnail {
-  height: 200px;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-size: cover;
 }
