--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -87,18 +87,51 @@ table tbody tr td {
   padding: 5px;
 }
 
-.dataTables_wrapper .row {
-  width: 100%;
+.dataTables_wrapper {
+  font-size: 0.9rem;
+
+  .row {
+    width: 100%;
+  }
+
+  .form-control {
+    margin: 0 0.5rem;
+  }
+
+  .dataTables_filter .form-control {
+    margin-right: 0;
+  }
 }
 
 table.dataTable {
   background-color: $white;
-  font-size: 1rem;
+
+  th,
+  td {
+    padding: 0.5rem;
+  }
+
+  th {
+    cursor: pointer;
+  }
 }
 
 .form-inline.dt-bootstrap label {
   @media (min-width: 576px) {
     justify-content: start;
+  }
+}
+
+.dataTables_paginate .paginate_button {
+  margin: 0 1em;
+
+  a:hover {
+    text-decoration: none;
+  }
+
+  &.disabled a {
+    cursor: default;
+    color: $lightgray;
   }
 }
 
