social feed styling

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -82,6 +82,12 @@ body.home {
   .j-paginate {
     display: none;
   }
+
+  .j-image {
+    display: block;
+    height: 350px;
+    overflow: hidden;
+  }
 }
 
 #homepage-myths {
