--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -68,28 +68,6 @@ body.home {
   }
 }
 
-#homepage-social {
-  p {
-    font-family: "News Cycle", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: 1.25rem;
-    color: #000;
-  }
-
-  h3 {
-    color: #3a3a3a;
-  }
-
-  .j-paginate {
-    display: none;
-  }
-
-  .j-image {
-    display: block;
-    height: 350px;
-    overflow: hidden;
-  }
-}
-
 #homepage-myths {
   background-color: $offwhite;
   background-image: url(../images/newbackgroundimg.jpg);
@@ -107,5 +85,27 @@ body.home {
     font-size: 1rem;
     text-transform: uppercase;
     opacity: 0.5;
+  }
+
+  .j-stacker-wrapper {
+    p {
+      font-family: "News Cycle", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-size: 1.25rem;
+      color: #000;
+    }
+
+    h3 {
+      color: #3a3a3a;
+    }
+
+    .j-paginate {
+      display: none;
+    }
+
+    .j-image {
+      display: block;
+      height: 350px;
+      overflow: hidden;
+    }
   }
 }
