social feed styling

--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -28,6 +28,7 @@
 @import "components/headings";
 @import "components/hero";
 @import "components/image_block";
+@import "components/juicer";
 @import "components/link_list";
 @import "components/page-builder-components";
 @import "components/stats";
