--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -17,7 +17,7 @@
 
 .banner_utility {
   padding: 0.5rem 3rem;
-  background-color: $altpurple;
+  background-color: $purple;
 
   .nav {
     float: right;
