--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -34,12 +34,13 @@
     text-transform: uppercase;
     font-size: 4rem;
     line-height: 1.2em;
+    margin-bottom: 1rem;
   }
 
   h3.front-subtitle {
     font-family: $font-headings;
     font-size: 1.8rem;
-    margin: 2rem 0 1rem;
+    margin: 1rem 0;
     opacity: 0.85;
     color: $white;
   }
@@ -82,5 +83,50 @@ body.home {
   h3 {
     font-size: 1rem;
     text-transform: uppercase;
+  }
+
+  .btn {
+    color: $white;
+    border-color: $white;
+
+    &:hover {
+      color: $purple;
+      border-color: $purple;
+      background-color: $white;
+    }
+  }
+}
+
+#homepage-info {
+  /*
+  h2 {
+    color: $gray;
+
+    strong {
+      color: $purple;
+    }
+  }
+  */
+
+  .btn {
+    border-color: $purple;
+    background-color: $purple;
+    color: $white;
+
+    &:hover {
+      color: $purple;
+      background-color: $white;
+    }
+  }
+}
+
+#homepage-discover {
+  .row {
+    margin: 0 auto;
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
   }
 }
