--- a/wp-content/themes/ualbany/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_buttons.scss
@@ -38,6 +38,12 @@ $button-seconary-color:   $brand-secondary;
   }
 }
 
+.btn-purple {
+  color: $white;
+  background-color: $purple;
+  border-color: $purple;
+}
+
 .btn-xl,
 .btn-lg,
 .btn-md,
