--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -19,6 +19,7 @@ $black-transparent-50: rgba(0, 0, 0, 0.5);
 
 // grays
 $lightgray: lighten($gray, 16);
+$midgray: #666;
 $darkgray: darken($gray, 40);
 $offwhite: lighten($gray, 33);
 
