--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -77,26 +77,36 @@
       top: 100%;
       left: 0;
       width: 100%;
-      background-color: darken($purple, 10%);
+      background-color: $purple;
 
       @include border-radius(0);
 
       ul {
         margin: 0 0 $spacing-extra-large 0;
         padding: 0;
+        list-style: none;
+
+        li {
+          padding: 0 0 8px;
+        }
       }
 
       h2 {
-        color: $lightgray;
-        text-transform: none;
-        font-size: 1.25rem;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 1rem;
+      }
+
+      > li {
+        padding: 0 0 8px;
       }
 
       > li a {
         text-transform: none;
-        padding: 0.15rem 0;
+        padding: 0;
         font-family: $font-sans;
         font-weight: 300;
+        font-size: 13px;
       }
     }
   }
