--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -54,7 +54,11 @@
 }
 
 .page-section {
-  padding: 30px;
+  padding: 60px;
+
+  h2 {
+    margin-bottom: 60px;
+  }
 
   &--buttons {
     background-color: $white;
