--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
@@ -1,7 +1,6 @@
 footer {
   background: #333 url(../images/mapimg_left.jpg) no-repeat left top;
-  padding-top: 35px;
-  padding-bottom: 36px;
+  padding: 60px 0;
   margin: 0;
   min-height: 360px;
 
@@ -64,7 +63,6 @@ footer {
       padding-top: 10px;
       clear: both;
       top: 40px;
-      padding-bottom: 20px;
     }
   }
 }
