--- a/wp-content/themes/ualbany/resources/assets/styles/components/_juicer.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_juicer.scss
@@ -1,4 +1,8 @@
 .juicer-feed {
+  .referral {
+    display: none !important;
+  }
+
   .j-stacker-wrapper {
     p {
       font-family: "News Cycle", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
