--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -49,6 +49,7 @@
 @import "layouts/posts";
 @import "layouts/archives";
 @import "layouts/programs";
+@import "layouts/countries";
 @import "layouts/myths";
 @import "layouts/submenu";
 @import "layouts/tinymce";
