--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -7,6 +7,7 @@ $enable-flex: false; // requested by VC for outdated browser support
 
 // brand colors
 $purple: #46166b;
+$altpurple: #602481;
 $gold: #eeb211;
 $gray: #97a4af;
 $teal: #006c68;
