--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -70,23 +70,62 @@
       color: $gold;
     }
 
+    /*
+     * max-height on locations/subjects dropdown
+     */
+
+    &#menu-item-1062 > .dropdown-menu,
+    &#menu-item-1061 > .dropdown-menu {
+      max-height: 50vh;
+    }
+
     .dropdown-menu {
       margin: 0;
       padding: $spacing-large;
       border: none;
       top: 100%;
       left: 0;
+      overflow: hidden;
       width: 100%;
       background-color: $purple;
+      border-top: 2px solid $altpurple;
+      transition: all 200ms ease-in;
+
+      .more-button {
+        position: absolute;
+        content: 'More +';
+        cursor: pointer;
+        text-transform: uppercase;
+        font-family: $font-headings;
+        color: lighten($purple, 45);
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        left: 0;
+        bottom: 0;
+        background-color: $altpurple;
+        box-shadow: -1px -1px 40px $purple;
+        display: none;
+
+        &.show {
+          display: block;
+        }
+
+        &:hover {
+          color: $white !important;
+        }
+      }
 
       @include border-radius(0);
 
       ul {
-        margin: 0 0 $spacing-extra-large 0;
+        margin: 0;
         padding: 0;
         list-style: none;
 
         li {
+          font-size: 1rem;
           padding: 0 0 8px;
         }
       }
@@ -106,7 +145,6 @@
         padding: 0;
         font-family: $font-sans;
         font-weight: 300;
-        font-size: 13px;
       }
     }
   }
